Add separate endpoint for card price updating
