# api/dto/price_update.go
@@ -1,0 +1,5 @@
+package dto
+
+type PriceUpdate struct {
+	NewPrice float32 `json:"newPrice"`
+}
